@@ -14,6 +14,8 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.pfm.dto.FinanceSummary;
 import com.pfm.entity.Budget;
 import com.pfm.entity.Transaction;
 import com.pfm.entity.TxnType;
@@ -22,6 +24,7 @@ import com.pfm.repo.BudgetRepo;
 import com.pfm.repo.TransactionRepo;
 import com.pfm.repo.UserRepo;
 import com.pfm.service.AiService;
+import com.pfm.service.FinanceSummaryService;
 
 import jakarta.servlet.http.HttpSession;
 import reactor.core.publisher.Flux;
@@ -33,12 +36,12 @@ public class AiController {
 	@Autowired
 	private AiService aiService;
 	@Autowired
-	private TransactionRepo transactionRepo;
-	@Autowired
-	private BudgetRepo budgetRepo;
-	@Autowired
 	private UserRepo userRepo;
+	@Autowired
+	private ObjectMapper objectMapper;
 	
+	@Autowired
+	private FinanceSummaryService financeSummaryService;
     // ================= AI CHAT PAGE =================
 	@GetMapping("/chat")
 	public String chatPage() {
@@ -56,116 +59,103 @@ public class AiController {
 	    User user = userRepo.findByEmail(email).orElse(null);
 	    if (user == null) return "Please login again.";
 
-	    Integer uid = user.getId();
+	 	Integer uid = getUid(principal);
 
-	    // ✅ user-specific data
-	    List<Transaction> txns = transactionRepo.findByUserId(uid);
-	    List<Budget> budgets = budgetRepo.findByUserId(uid);
+	 	//Redis cached
+		   FinanceSummary s = financeSummaryService.getSummary(uid);
 
-	    double totalIncome = 0.0;
-	    double totalExpense = 0.0;
+		   String prompt = """
+				   You are a Personal Finance Assistant for an Indian user. Currency is INR (₹).
+				   Use ONLY the data below. DO NOT guess.
 
-	    Map<String, Double> incomeByCat = new HashMap<>();
-	    Map<String, Double> expenseByCat = new HashMap<>();
+				   Greeting rule:
+				   If the user message is only a greeting (hi/hello/hey), respond EXACTLY:
+				   Hello %s 👋 Welcome back!
+				   What would you like to do today?
+				   • 📌 Expense summary (this month)
+				   • 🧾 Budget status (within/over)
+				   • 📈 Trends (this month vs last month)
+				   • 📊 Explain my charts
+				   • 💡 Savings tips
+				   (Stop.)
 
-	    for (Transaction t : txns) {
-	        String catName = (t.getCategory() != null) ? t.getCategory().getName() : "Uncategorized";
+		   			STYLE RULES (MUST FOLLOW ALWAYS):
+		   		- Always start with a heading line.
+		   		- Always use bullets (•) only. Never use '*' bullets.
+		   		- Put every point on a new line.
+		   		- For items like "Income vs Expense:", keep the label before ':' so UI can bold it.
+		   		- Use these headings when relevant:
+		   			📌 Summary
+		   			📊 Details
+		   			📈 Trends
+		   			✅ Insights
+		   			🎯 Actions
+		   		
+		   		If the user asks about charts/explain charts:
+		   		Return under heading: 📊 Details
+		   		Use bullets like:
+		   			• Income vs Expense: <1 line meaning>
+		   			• Category-wise Spending: <1 line meaning>
+		   			• Monthly Trend: <1 line meaning>
+		   			• Budget vs Actual: <1 line meaning>
 
-	        // ✅ enum type safe
-	        TxnType type = (t.getCategory() != null && t.getCategory().getType() != null)
-	                ? t.getCategory().getType()
-	                : TxnType.EXPENSE;
 
-	        double amt = t.getAmount();
+				   Routing rules (VERY IMPORTANT):
+				   - If user asks about expenses -> use EXPENSE_DATA + TOTALS.
+				   - If user asks about income -> use INCOME_DATA + TOTALS.
+				   - If user asks about budgets -> use BUDGET_DATA + BUDGET_VS_ACTUAL.
+				   - If user asks “over budget / within budget / left budget” -> use BUDGET_VS_ACTUAL + OVERSPEND.
+				   - If user asks trends / last month / compare -> use TREND_DATA.
+				   - If user asks charts -> use CHART_DATA and reference totals.
+				   - Give exactly 2 actionable suggestions ONLY if user asks advice/tips/save/reduce.
 
-	        if (type == TxnType.INCOME) {
-	            totalIncome += amt;
-	            incomeByCat.put(catName, incomeByCat.getOrDefault(catName, 0.0) + amt);
-	        } else {
-	            totalExpense += amt;
-	            expenseByCat.put(catName, expenseByCat.getOrDefault(catName, 0.0) + amt);
-	        }
-	    }
+				   Output format:
+				   - Headings + bullets
+				   - No long paragraphs
+				   - Money format ₹43,947.00
 
-	    // ✅ Budget summary
-	    StringBuilder budgetSummary = new StringBuilder();
-	    if (budgets != null && !budgets.isEmpty()) {
-	        for (Budget b : budgets) {
-	            String bcat = (b.getCategory() != null) ? b.getCategory().getName() : "Unknown";
-	            budgetSummary.append(bcat)
-	                    .append(": ₹")
-	                    .append(String.format("%,.2f", b.getAmount()))
-	                    .append(" (").append(b.getMonth()).append(" ").append(b.getYear()).append(")")
-	                    .append("\n");
-	        }
-	    } else {
-	        budgetSummary.append("Not available\n");
-	    }
+				   DATA:
+				   INCOME_TOTAL: ₹%s
+				   EXPENSE_TOTAL: ₹%s
+				   NET_SAVINGS: ₹%s
 
-	    // ✅ expense summary (sorted desc)
-	    StringBuilder expenseSummary = new StringBuilder();
-	    expenseByCat.entrySet().stream()
-	            .sorted((a, b) -> Double.compare(b.getValue(), a.getValue()))
-	            .forEach(e -> expenseSummary.append(e.getKey())
-	                    .append(": ₹").append(String.format("%,.2f", e.getValue()))
-	                    .append("\n"));
+				   INCOME_DATA:
+				   %s
 
-	    // ✅ income summary (sorted desc)
-	    StringBuilder incomeSummary = new StringBuilder();
-	    incomeByCat.entrySet().stream()
-	            .sorted((a, b) -> Double.compare(b.getValue(), a.getValue()))
-	            .forEach(e -> incomeSummary.append(e.getKey())
-	                    .append(": ₹").append(String.format("%,.2f", e.getValue()))
-	                    .append("\n"));
+				   EXPENSE_DATA:
+				   %s
 
-	    String prompt = """
-	    You are a Personal Finance Assistant for an Indian user. Currency is INR (₹).
-	    Use ONLY the data below. DO NOT guess anything.
+				   BUDGET_DATA:
+				   %s
 
-	    Greeting rule:
-	    If the user message is only a greeting (hi/hello/hey), respond:
-	    Hello %s 👋 Welcome to your Personal Finance Assistant.
-	    What would you like to do today?
-	    • 📌 Expense summary (this month)
-	    • 🧾 Budget status (within/over)
-	    • 💡 Savings tips
-	    (Stop.)
+				   BUDGET_VS_ACTUAL:
+				   %s
 
-	    Answering rules:
-	    - Answer ONLY what the user asked.
-	    - Use EXPENSE_DATA for expenses, INCOME_DATA for income, BUDGET_DATA for budgets.
-	    - Only give 2 actionable suggestions if user asks for advice/tips/save/reduce.
+				   OVERSPEND:
+				   %s
 
-	    Output format:
-	    - Headings + bullets (no long paragraphs)
-	    - Money format ₹43,947.00
+				   TREND_DATA:
+				   %s
 
-	    DATA:
-	    INCOME_TOTAL: ₹%s
-	    EXPENSE_TOTAL: ₹%s
-	    NET_SAVINGS: ₹%s
+				   CHART_DATA:
+				   %s
 
-	    INCOME_DATA:
-	    %s
-
-	    EXPENSE_DATA:
-	    %s
-
-	    BUDGET_DATA:
-	    %s
-
-	    User Question: %s
-	    Return plain text only.
-	    """.formatted(
-	            user.getName(),
-	            String.format("%,.2f", totalIncome),
-	            String.format("%,.2f", totalExpense),
-	            String.format("%,.2f", (totalIncome - totalExpense)),
-	            incomeSummary.toString(),
-	            expenseSummary.toString(),
-	            budgetSummary.toString(),
-	            question
-	    );
+				   User Question: %s
+				   Return plain text only.
+				   """.formatted(
+				       user.getName(),
+				       String.format("%,.2f", s.totalIncome),
+				       String.format("%,.2f", s.totalExpense),
+				       String.format("%,.2f", s.netSavings),
+				       s.incomeSummary,
+				       s.expenseSummary,
+				       s.budgetSummary,
+				       s.budgetVsActualSummary,
+				       s.overspendSummary,
+				       s.trendSummary,
+				       s.chartSummary,
+				       question
+				   );
 
 	    return aiService.ask(prompt);
 	}
@@ -197,130 +187,115 @@ public class AiController {
 		        return Flux.just("Please login again.");
 		    }
 
-		    String email = principal.getName();
-		    User user = userRepo.findByEmail(email).orElse(null);
+		 	Integer uid = getUid(principal);
+		    User user = userRepo.findById(uid).orElse(null);
+		    
+		    if (user == null) return Flux.just("Please login again.");
 
-		    if (user == null) {
-		        return Flux.just("Please login again.");
-		    }
+		 //Redis cached 
+		   FinanceSummary s = financeSummaryService.getSummary(uid);
+		    
+		   String prompt = """
+				   You are a Personal Finance Assistant for an Indian user. Currency is INR (₹).
+				   Use ONLY the data below. DO NOT guess.
 
-		    Integer uid = user.getId();
+				   Greeting rule:
+				   If the user message is only a greeting (hi/hello/hey), respond EXACTLY:
+				   Hello %s 👋 Welcome back!
+				   What would you like to do today?
+				   • 📌 Expense summary (this month)
+				   • 🧾 Budget status (within/over)
+				   • 📈 Trends (this month vs last month)
+				   • 📊 Explain my charts
+				   • 💡 Savings tips
+				   
+				   STYLE RULES (MUST FOLLOW ALWAYS):
+		   		- Always start with a heading line.
+		   		- Always use bullets (•) only. Never use '*' bullets.
+		   		- Put every point on a new line.
+		   		- For items like "Income vs Expense:", keep the label before ':' so UI can bold it.
+		   		- Use these headings when relevant:
+		   			📌 Summary
+		   			📊 Details
+		   			📈 Trends
+		   			✅ Insights
+		   			🎯 Actions
 
-		    List<Transaction> txns = transactionRepo.findByUserId(uid);		
-		    List<Budget> budgets = budgetRepo.findByUserId(uid);
+				   Routing rules (VERY IMPORTANT):
+				   - If user asks about expenses -> use EXPENSE_DATA + TOTALS.
+				   - If user asks about income -> use INCOME_DATA + TOTALS.
+				   - If user asks about budgets -> use BUDGET_DATA + BUDGET_VS_ACTUAL.
+				   - If user asks “over budget / within budget / left budget” -> use BUDGET_VS_ACTUAL + OVERSPEND.
+				   - If user asks trends / last month / compare -> use TREND_DATA.
+				   - If user asks charts -> use CHART_DATA and reference totals.
+				   - Give exactly 2 actionable suggestions ONLY if user asks advice/tips/save/reduce.
 
+				   Output format:
+				   - Use Headings + bullets
+				   - Each bullet on new line
+				   - No long paragraphs
+				   - always format Money like ₹43,947.00
 
-	    double totalIncome = 0.0;
-	    double totalExpense = 0.0;
-	    
-	    Map<String, Double> incomeByCat = new HashMap<>();
-	    Map<String, Double> expenseByCat = new HashMap<>();
-	    
-	    for (Transaction t : txns) {
-	        String catName = (t.getCategory() != null)
-	                ? t.getCategory().getName() : "Uncategorized";
+				   DATA:
+				   INCOME_TOTAL: ₹%s
+				   EXPENSE_TOTAL: ₹%s
+				   NET_SAVINGS: ₹%s
 
-	        TxnType type = (t.getCategory() != null)
-	                ? t.getCategory().getType() : TxnType.EXPENSE; // default safe value
+				   INCOME_DATA:
+				   %s
 
-	        double amt = t.getAmount();
+				   EXPENSE_DATA:
+				   %s
 
-	        if (type == TxnType.INCOME) {
-	            totalIncome += amt;
-	            incomeByCat.put(catName,
-	                    incomeByCat.getOrDefault(catName, 0.0) + amt);
-	        } else {
-	            totalExpense += amt;
-	            expenseByCat.put(catName,
-	                    expenseByCat.getOrDefault(catName, 0.0) + amt);
-	        }
-	    }
+				   BUDGET_DATA:
+				   %s
 
-	    
-        // Budgets summary
-	    StringBuilder budgetSummary  = new StringBuilder();
-	    if(budgets != null && !budgets.isEmpty()) {
-	    	for(Budget b:budgets) {
-	    		String bcat = (b.getCategory() != null) ? b.getCategory().getName() : "Unknown";
-	    		budgetSummary.append(bcat)
-	    					.append(": ₹")
-	    					.append(String.format("%, .2f", b.getAmount()))
-	    					.append(" (")
-	    					.append(b.getMonth()).append(" ").append(b.getYear())
-	    					.append(")\n");
-	    	}
-	    } else {
-	    	budgetSummary.append("Not Available\n");
-	    }
-	    
-        // Income/Expense category summaries
-	    StringBuilder expenseSummary = new StringBuilder();
-        expenseByCat.entrySet().stream()
-                .sorted((a,b)-> Double.compare(b.getValue(), a.getValue()))
-                .forEach(e -> expenseSummary.append(e.getKey())
-                        .append(": ₹").append(String.format("%,.2f", e.getValue()))
-                        .append("\n"));
+				   BUDGET_VS_ACTUAL:
+				   %s
 
-        StringBuilder incomeSummary = new StringBuilder();
-        incomeByCat.entrySet().stream()
-                .sorted((a,b)-> Double.compare(b.getValue(), a.getValue()))
-                .forEach(e -> incomeSummary.append(e.getKey())
-                        .append(": ₹").append(String.format("%,.2f", e.getValue()))
-                        .append("\n"));
-        
-        String prompt = """
-        		You are a Personal Finance Assistant for an Indian user. Currency is INR (₹).
-        		Use ONLY the data below. DO NOT guess anything.
+				   OVERSPEND:
+				   %s
 
-        		Greeting rule:
-        		If the user message is only a greeting (hi/hello/hey), respond EXACTLY:
-        		Hello %s 👋 Welcome to your Personal Finance Assistant.
-        		What would you like to do today?
-        		• 📌 Expense summary (this month)
-        		• 🧾 Budget status (within/over)
-        		• 💡 Savings tips
-        		(Stop.)
+				   TREND_DATA:
+				   %s
 
-        		Answering rules:
-        		- Answer ONLY what the user asked.
-        		- If user asks about budgets -> use BUDGET_DATA.
-        		- If user asks about expenses -> use EXPENSE_DATA.
-        		- If user asks about income -> use INCOME_DATA.
-        		- If user asks “is my finance good” -> use totals + net savings and explain briefly.
-        		- Only give "2 actionable suggestions" when user asks for advice/tips/save/reduce.
+				   CHART_DATA:
+				   %s
 
-        		Output format rules:
-        		- Use short headings + bullets.
-        		- Each bullet on new line.
-        		- Avoid long paragraphs.
-        		- Always format money like ₹43,947.00.
+				   User Question: %s
+				   Return plain text only.
+				   """.formatted(
+				       user.getName(),
+				       String.format("%,.2f", s.totalIncome),
+				       String.format("%,.2f", s.totalExpense),
+				       String.format("%,.2f", s.netSavings),
+				       s.incomeSummary,
+				       s.expenseSummary,
+				       s.budgetSummary,
+				       s.budgetVsActualSummary,
+				       s.overspendSummary,
+				       s.trendSummary,
+				       s.chartSummary,
+				       question
+				   );
 
-        		DATA:
-        		INCOME_TOTAL: ₹%s
-        		EXPENSE_TOTAL: ₹%s
-        		NET_SAVINGS: ₹%s
-
-        		INCOME_DATA:
-        		%s
-
-        		EXPENSE_DATA:
-        		%s
-
-        		BUDGET_DATA:
-        		%s
-
-        		User Question: %s
-        		""".formatted(
-        		        user.getName(),                              // ✅ greeting name
-        		        String.format("%,.2f", totalIncome),
-        		        String.format("%,.2f", totalExpense),
-        		        String.format("%,.2f", (totalIncome - totalExpense)),
-        		        incomeSummary.toString(),
-        		        expenseSummary.toString(),
-        		        budgetSummary.toString(),
-        		        question
-        		);
-
-        return aiService.askStream(prompt);
+		   return aiService.askStream(prompt)
+				    .map(tok -> {
+				        try {
+				            return objectMapper.writeValueAsString(java.util.Map.of("t", tok));
+				        } catch (Exception e) {
+				            return "{\"t\":\"\"}";
+				        }
+				    })
+				    .onErrorResume(ex ->
+				        Flux.just("{\"t\":\"\\n⚠️ AI error: " + ex.getMessage().replace("\"","'") + "\"}")
+				    );
+	}
+	
+	private Integer getUid(Principal principal) {
+	    String email = principal.getName();
+	    return userRepo.findByEmail(email)
+	            .orElseThrow(() -> new RuntimeException("User not found"))
+	            .getId();
 	}
 }
